# canary

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .taplo.toml  AGENTS.md  Cargo.toml  LICENSE  README.md  btca.config.jsonc  justfile  mise.toml  package.json  rustfmt.toml  tsconfig.json
apps/fumadocs/: components.json  package.json  tsconfig.json
apps/fumadocs/content/docs/: index.mdx  meta.json
apps/fumadocs/src/: mdx-components.tsx
apps/fumadocs/src/app/: global.css  layout.tsx
apps/fumadocs/src/lib/: layout.shared.tsx
apps/server/: package.json  tsconfig.json  tsdown.config.ts  verify-otlp.ts
apps/server/scripts/: reindex-smoke.ts  retrieval-audit.ts
apps/server/src/: index.ts
apps/server/src/cli/: seeder.ts
apps/server/src/logging/: logger.test.ts  logger.ts
apps/server/src/queues/: index.ts  registry.ts
apps/server/src/services/: boc.ts  database.ts  embedding.ts  jina.ts  queue.ts
apps/tui/: package.json  tsconfig.json
apps/tui/src/: index.tsx
apps/web/: components.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: index.css  main.tsx
crates/parser/: Cargo.toml
crates/parser/src/: error.rs  lib.rs  parallel.rs  parser.rs  resolve.rs  tree.rs
docs/: boe-parser-ltree-compatibility.md  boe-xml-inconsistencies-study.md  boe-xml-parser-architecture.md  boe-xml-parser-implementation-spec.md  fragment-based-search-architecture.md  indexing-performance-audit.md  node-extraction-guide.md  retrieval-learnings.md  retrieval-lexical-prefiltering.md  retrieval-reference-anchors.md  todo-reference-anchor-chunking.md
docs/effect-primitives/: Chunk.md  Data.TaggedError.md  Effect.Service.md  Effect.fn.md  Effect.md  HashMap.md  Layer.md  Option.md  Schedule.md  Schema.md  Stream.md
docs/plans/: 2026-01-23-canary-core-infrastructure.md  2026-01-23-canary-ingestion-engine.md  2026-01-23-queue-registry-seeder.md  2026-01-23-seeder-daemon-cli.md  2026-01-23-typed-queue-seeder-design.md  2026-02-09-drizzle-effect-migration-plan.md
(+146 files in other folders)
