[workspace]
members  = ["crates/*"]
resolver = "3"

[workspace.package]
authors     = ["Pablo Hernandez <hadronomy@gmail.com> (https://hadronomy.com/)"]
description = "Language tools for the `ram` language"
edition     = "2024"
license     = "MIT"
publish     = false
repository  = "https://github.com/hadronomy/ram"
version     = "0.1.0-alpha.1"

[workspace.dependencies]
indextree = { version = "4.7", features = ["par_iter", "deser"] }
pdf_oxide = "0.3"
rayon     = "1.10"
rushdown  = "0.9"
serde     = { version = "1", features = ["derive"] }
thiserror = "2"


[profile.release]
debug       = 1
incremental = true
lto         = true
opt-level   = 3
strip       = "none"

[profile.bench]
debug = true
strip = false

[profile.dev.package.backtrace]
opt-level = 3
